--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700");
 
 :root {
-  --primaryColor: #f09d51;
+  --primaryColor: #008bff;
   --mainWhite: #fff;
   --mainBlack: #222;
   --mainGrey: #ececec;
