--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700");
 
 :root {
-  --primaryColor: #008bff;
+  --primaryColor: #f09d51;
   --mainWhite: #fff;
   --mainBlack: #222;
   --mainGrey: #ececec;
@@ -21,7 +21,7 @@ body {
 /* --------------- Navbar ---------------- */
 .navbar {
   position: sticky;
-  top: 0;
+  top: 0;  
   height: 60px;
   width: 100%;
   display: flex;
@@ -58,7 +58,7 @@ body {
 /* --------------- Hero ---------------- */
 .hero {
   min-height: calc(100vh - 60px);
-  background: url("./images/hero-bcg.jpeg") center/cover no-repeat;
+  background: url("../images/hero-bcg.jpeg") center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -79,7 +79,7 @@ body {
   padding: 1rem 3rem;
   text-transform: uppercase;
   letter-spacing: var(--mainSpacing);
-  font-size: 1rem;
+  font-size: 1.2rem;
   background: var(--primaryColor);
   color: var(--mainBlack);
   border: 1px solid var(--primaryColor);
@@ -118,7 +118,7 @@ body {
 }
 .bag-btn {
   position: absolute;
-  top: 70%;
+  bottom: 85%;
   right: 0;
   background: var(--primaryColor);
   border: none;
@@ -133,10 +133,30 @@ body {
 .bag-btn:hover {
   color: var(--mainWhite);
 }
+.bag-btn1 {
+  position: absolute;
+  top: 85%;
+  left: 0;
+  background: var(--primaryColor);
+  border: none;
+  text-transform: uppercase;
+  padding: 0.5rem 0.75rem;
+  letter-spacing: var(--mainSpacing);
+  font-weight: bold;
+  transition: var(--mainTransition);
+  transform: translateX(-101%);
+  cursor: pointer;
+}
+.bag-btn1:hover {
+  color: var(--mainWhite);
+}
 .fa-shopping-cart {
   margin-right: 0.5rem;
 }
 .img-container:hover .bag-btn {
+  transform: translateX(0);
+}
+.img-container:hover .bag-btn1 {
   transform: translateX(0);
 }
 .product-img {
@@ -241,8 +261,8 @@ body {
   color: grey;
   cursor: pointer;
 }
-.fa-chevron-up,
-.fa-chevron-down {
+.fa-plus-square,
+.fa-minus-square {
   color: var(--primaryColor);
   cursor: pointer;
 }
