--- a/styles/style.css
+++ b/styles/style.css
@@ -365,24 +365,53 @@ body {
 
 /* --------------- Footer ---------------------*/
 footer{
-  position: sticky;
-  top: 0;  
-  height: 60px;
+  height: 125px;
   width: 100%;
-  display: flex;
-  align-items: center;
-  background: rgb(231, 226, 221);
-  z-index: 1;
-  color: var(--primaryColor);
-  font-size:20px;
+  background-color: #DDD;
+  font-size: 16px;
+  bottom: 0;
 }
-.footer-center {
-  width: 100%;
-  max-width: 1170px;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 25rem;
+footer .footer .footer-center p{
+  font-weight: bold;
+  padding: 15px 5px 15px 0;
+}
+footer .footer {
+  margin: 20px 150px;
+}
+/*footer .footer ul1 {
+  no thing
+}*/
+footer .footer .ul1 ul li{
+  display: inline;
+  border-right: 1px solid #a0b1c1;
+  padding: 0px 10px;
+}
+footer .footer .ul1 ul li a{
+  text-decoration: none;
+  color: #d66800;
+}
+footer .footer .ul1 ul li:last-child{
+  border: none;
+}
+footer .footer .ul1 ul li:first-child{
+  padding-left: 0;
+}
+footer .footer .ul2 {
+  margin-top: 20px;
+}
+footer .footer .ul2 ul li{
+  display: inline;
+  border-right: 1px solid #a0b1c1;
+  padding: 0px 10px;
+}
+footer .footer .ul2 ul li a{
+  text-decoration: none;
+  color: #ff7a00;
+}
+footer .footer .ul2 ul li:last-child{
+  border: none;
+}
+footer .footer .ul2 ul li:first-child{
+  padding-left: 0;
 }
 /* --------------- End Footer ---------------------*/
